--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,6 @@
 </main>
     <footer>
-        <h6>{{ .Site.Copyright | markdownify }} | 
-            Rendered by <a href="https://gohugo.io" title="Hugo">Hugo</a> |
+        <h6>{{ .Site.Copyright | markdownify }} | <a href="https://whobbes.com" title="whobbes.com">whobbes.com</a> |
             <a href="{{.Site.BaseURL}}index.xml">Subscribe</a></h6>
     </footer>
 </div>
